# parser

./: install.sh  pyproject.toml
app/: README.md  entrypoint.sh  env_example
app/api/: urls.py  views.py
app/app/: settings.py  urls.py
app/rate/: as.html  models.py  parser.py  parser_async.py  serializers.py  urls.py  views.py
app/rate/management/commands/: create_superuser.py  run_parser.py
app/rate/static/rate/assets/css/: basic.css  extra.css
app/rate/static/rate/assets/js/: app.js  prigress.js  progress.js  rate.js  scripts.js
app/rate/templates/rate/: base.html  catalog.html  progress_parser.html
